--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -16,6 +16,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+
 }
 
 dependencies {
@@ -28,6 +29,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/javax.mail.jar')
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    implementation 'com.jjoe64:graphview:4.2.2'
+
 }
 
 configurations.all {
