finish UI for Quiz and More fragment

--- a/v_regular/Mocket/app/src/main/AndroidManifest.xml
+++ b/v_regular/Mocket/app/src/main/AndroidManifest.xml
@@ -22,6 +22,8 @@
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".SignUpActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
+        <activity android:name=".EditProfileActivity"
+            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".ChangePasswordActivity"
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"/>
         <activity android:name=".MainActivity"
