--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation files('libs/javax.mail.jar')
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.jjoe64:graphview:4.2.2'
+    compile 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.0'
+
+
+
 
 }
-
