--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -24,6 +24,7 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:+'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+    implementation 'com.google.googlejavaformat:google-java-format:1.6'
     implementation 'com.android.support:support-v4:28.0.0-alpha3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
@@ -31,9 +32,7 @@ dependencies {
     implementation files('libs/javax.mail.jar')
     implementation 'com.github.bumptech.glide:glide:4.7.1'
     implementation 'com.jjoe64:graphview:4.2.2'
-    compile 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.0'
-
-
+    implementation 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.0'
 
 
 }
