--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -25,6 +25,8 @@ android {
 
 dependencies {
     implementation fileTree(include: ['*.jar'], dir: 'libs')
+    implementation 'com.jjoe64:graphview:4.2.2'
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.0.3'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:+'
     implementation 'de.hdodenhof:circleimageview:2.2.0'
@@ -36,7 +38,7 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation files('libs/javax.mail.jar')
     implementation 'com.github.bumptech.glide:glide:4.7.1'
-    implementation 'com.jjoe64:graphview:4.2.2'
+
     implementation 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.0'
 
 
