--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -42,7 +42,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.android.gms:play-services-auth:15.0.1'
-//    implementation 'com.google.firebase:firebase-admin:6.3.0'
+    implementation 'com.google.firebase:firebase-core:16.0.1'
+    //    implementation 'com.google.firebase:firebase-admin:6.3.0'
 
 
     testImplementation 'junit:junit:4.12'
