--- a/v_regular/Mocket/app/build.gradle
+++ b/v_regular/Mocket/app/build.gradle
@@ -52,7 +52,7 @@ dependencies {
     implementation files('libs/javax.mail.jar')
     implementation 'com.github.bumptech.glide:glide:4.7.1'
 
-    implementation 'com.wajahatkarim3.EasyFlipView:EasyFlipView:1.0.0'
+    implementation 'https://github.com/wajahatkarim3/EasyFlipView:1.0.0'
 
 
 
